--- a/equipos/atleticoDeMadrid/estadio.html
+++ b/equipos/atleticoDeMadrid/estadio.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="alaves.html">Plantilla</a>
+                        <a class="nav-link active" aria-current="page" href="atleticoDeMadrid.html">Plantilla</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="estadio.html">Estadio</a>
