--- a/equipos/celtaDeVigo/goles.html
+++ b/equipos/celtaDeVigo/goles.html
@@ -356,6 +356,8 @@
             
         </div><!-- /.row -->
 
+        </div>
+
 
         <div class="bg-primary">
             <footer class="py-3">
