--- a/equipos/lasPalmas/amarillas.html
+++ b/equipos/lasPalmas/amarillas.html
@@ -68,16 +68,16 @@
                 </img>
 
                 <h2>Álvaro Valles</h2>
-                <h5>6 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Portero</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/aaronEscandell.png">
                 </img>
 
                 <h2>Aarón Escandell</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Portero</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -94,24 +94,24 @@
                 </img>
 
                 <h2>Marvin Park</h2>
-                <h5>3 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/sergiCardona.png">
                 </img>
 
                 <h2>Sergi Cardona</h2>
-                <h5>5 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/alexSuarez.png">
                 </img>
 
                 <h2>Álex Suarez</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -125,24 +125,24 @@
                 </img>
 
                 <h2>Eric Curbelo</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/alvaroLemos.png">
                 </img>
 
                 <h2>Álvaro Lemos</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/mikaMarmol.png">
                 </img>
 
                 <h2>Mika Mármol</h2>
-                <h5>9 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -151,8 +151,8 @@
                 </img>
 
                 <h2>Daley Sinkgraven</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -161,8 +161,8 @@
                 </img>
 
                 <h2>Saúl Coco</h2>
-                <h5>12 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -172,8 +172,8 @@
                 </img>
 
                 <h2>Julián Araujo</h2>
-                <h5>1 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -191,24 +191,24 @@
                 </img>
 
                 <h2>Javi Muñóz</h2>
-                <h5>4 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/albertoMoleiro.png">
                 </img>
 
                 <h2>Albeto Moleiro</h2>
-                <h5>7 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro ofensivo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/benitoRamirez.png">
                 </img>
 
                 <h2>Benito Ramírez</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -222,32 +222,32 @@
                 </img>
 
                 <h2>Enzo Loiodice</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/kirianRodriguez.png">
                 </img>
 
                 <h2>Kirian Rodríguez</h2>
-                <h5>6 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/omenukeMfulu.png">
                 </img>
 
                 <h2>Omenuke Mfulu</h2>
-                <h5>1 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro defensivo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/pejiño.png">
                 </img>
 
                 <h2>Pejiño</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -255,8 +255,8 @@
                 </img>
 
                 <h2>Fabio González</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -276,24 +276,24 @@
                 </img>
 
                 <h2>Cristian Herrera</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/sandroRamirez.png">
                 </img>
 
                 <h2>Sandro Ramírez</h2>
-                <h5>5 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/munirElHaddadi.png">
                 </img>
 
                 <h2>Munir El Haddadi</h2>
-                <h5>7 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -307,8 +307,8 @@
                 </img>
 
                 <h2>Marc Cardona</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Delantero Centro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar amarillas</button>
             </div><!-- /.col-lg-4 -->
 
             
