--- a/equipos/lasPalmas/asistencias.html
+++ b/equipos/lasPalmas/asistencias.html
@@ -56,6 +56,7 @@
 
     <div class="container marketing">
 
+
         <!-- PORTEROS -->
 
         <h1 class="mt-5">PORTEROS</h1>
@@ -68,16 +69,16 @@
                 </img>
 
                 <h2>Álvaro Valles</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Portero</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/aaronEscandell.png">
                 </img>
 
                 <h2>Aarón Escandell</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Portero</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -94,24 +95,24 @@
                 </img>
 
                 <h2>Marvin Park</h2>
-                <h5>4 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/sergiCardona.png">
                 </img>
 
                 <h2>Sergi Cardona</h2>
-                <h5>6 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/alexSuarez.png">
                 </img>
 
                 <h2>Álex Suarez</h2>
-                <h5>1 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -125,24 +126,24 @@
                 </img>
 
                 <h2>Eric Curbelo</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/alvaroLemos.png">
                 </img>
 
                 <h2>Álvaro Lemos</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/mikaMarmol.png">
                 </img>
 
                 <h2>Mika Mármol</h2>
-                <h5>3 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -151,8 +152,8 @@
                 </img>
 
                 <h2>Daley Sinkgraven</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -161,8 +162,8 @@
                 </img>
 
                 <h2>Saúl Coco</h2>
-                <h5>3 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -172,8 +173,8 @@
                 </img>
 
                 <h2>Julián Araujo</h2>
-                <h5>4 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -191,24 +192,24 @@
                 </img>
 
                 <h2>Javi Muñóz</h2>
-                <h5>4 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/albertoMoleiro.png">
                 </img>
 
                 <h2>Albeto Moleiro</h2>
-                <h5>7 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Mediocentro ofensivo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/benitoRamirez.png">
                 </img>
 
                 <h2>Benito Ramírez</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -222,32 +223,32 @@
                 </img>
 
                 <h2>Enzo Loiodice</h2>
-                <h5>3 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/kirianRodriguez.png">
                 </img>
 
                 <h2>Kirian Rodríguez</h2>
-                <h5>9 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/omenukeMfulu.png">
                 </img>
 
                 <h2>Omenuke Mfulu</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Mediocentro defensivo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/pejiño.png">
                 </img>
 
                 <h2>Pejiño</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -255,8 +256,8 @@
                 </img>
 
                 <h2>Fabio González</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -276,24 +277,24 @@
                 </img>
 
                 <h2>Cristian Herrera</h2>
-                <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/sandroRamirez.png">
                 </img>
 
                 <h2>Sandro Ramírez</h2>
-                <h5>3 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/munirElHaddadi.png">
                 </img>
 
                 <h2>Munir El Haddadi</h2>
-                <h5>4 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -307,8 +308,8 @@
                 </img>
 
                 <h2>Marc Cardona</h2>
-                <h5>1 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <h5>Delantero Centro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero asistencias</button>
             </div><!-- /.col-lg-4 -->
 
             
@@ -340,7 +341,7 @@
         document.addEventListener('DOMContentLoaded', function (e) {
 
 
-            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroAmarillas');
+            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroAsistencias');
 
             let formulario = document.getElementById('formulario');
 
@@ -360,7 +361,7 @@
 
                 divContenido.innerHTML = `
         <label for="posicionJugador" class="form-label">Escribe la cantidad de amarillas</label>
-        <input type="text" class="form-control mb-3" id="cantidadPartidosNueva" style="width: 250px;" required>
+        <input type="text" class="form-control mb-3" id="cambiarAsistenciasNueva" style="width: 250px;" required>
 
         <button type="submit" class="btn btn-primary">Cambiar amarillas</button>
         `;
@@ -373,9 +374,9 @@
                 boton.addEventListener('click', cambiarNumeroPartidos)
 
                 function cambiarNumeroPartidos(e){
-                    let numeroPartidosNuevo = formulario.querySelector('#cantidadPartidosNueva').value;
+                    let numeroPartidosNuevo = formulario.querySelector('#cambiarAsistenciasNueva').value;
                     nuevosPartidos.innerHTML = `
-                    ${numeroPartidosNuevo} amarillas
+                    ${numeroPartidosNuevo} asistencias
                     `
                 }
 
