--- a/equipos/atleticoDeMadrid/partidosJugados.html
+++ b/equipos/atleticoDeMadrid/partidosJugados.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="alaves.html">Plantilla</a>
+                        <a class="nav-link active" aria-current="page" href="atleticoDeMadrid.html">Plantilla</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="estadio.html">Estadio</a>
@@ -321,6 +321,7 @@
 
 
 
+    </div>
     </div>
 
     <div class="bg-primary">
