--- a/equipos/barcelona/partidosJugados.html
+++ b/equipos/barcelona/partidosJugados.html
@@ -318,6 +318,8 @@
 
     </div>
 
+    </div>
+
     <div class="bg-primary">
         <footer class="py-3">
             <ul class="nav justify-content-center">
