--- a/equipos/celtaDeVigo/asistencias.html
+++ b/equipos/celtaDeVigo/asistencias.html
@@ -355,6 +355,8 @@
             </div><!-- /.col-lg-4 -->
             
         </div><!-- /.row -->
+        
+    </div>
 
         <div class="bg-primary">
             <footer class="py-3">
