--- a/equipos/celtaDeVigo/temporadas.html
+++ b/equipos/celtaDeVigo/temporadas.html
@@ -356,6 +356,8 @@
             
         </div><!-- /.row -->
 
+        </div>
+
         <div class="bg-primary">
             <footer class="py-3">
                 <ul class="nav justify-content-center">
